2025-04-04T00:50:34Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14255654115 # 603
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-04
* notice: last 14d: unq all: 4 4
* notice: prev accum: outdated-unq outdated-all / unq all: 799 1277 / 802 1280
* notice: next accum: outdated-unq outdated-all / unq all: 800 1278 / 804 1282
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2025-03-20] / [2025-04-03]

2025-04-03T00:50:35Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14232526888 # 602
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-03
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 798 1276 / 802 1280
* notice: next accum: outdated-unq outdated-all / unq all: 799 1277 / 802 1280
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-03-19] / []

2025-04-02T00:51:35Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14209076302 # 601
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-02
* notice: last 14d: unq all: 3 4
* notice: prev accum: outdated-unq outdated-all / unq all: 797 1275 / 801 1279
* notice: next accum: outdated-unq outdated-all / unq all: 798 1276 / 802 1280
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-03-18] / [2025-04-01]

2025-04-01T00:57:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14184629137 # 600