@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-04-04T00:50:34Z",
+  "timestamp" : "2025-04-05T00:49:38Z",
   "count_outdated" : 1278,
   "uniques_outdated" : 800,
-  "count" : 1282,
-  "uniques" : 804,
+  "count" : 1283,
+  "uniques" : 805,
   "clones" : [
     {
       "timestamp": "2025-03-22T00:00:00Z",
@@ -31,6 +31,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-04-04T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
