@@ -1,5 +1,5 @@
 {
-  "count": 4,
+  "count": 5,
   "uniques": 4,
   "clones": [
     {
@@ -16,6 +16,11 @@
       "timestamp": "2025-04-03T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-04-04T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
