@@ -1,3 +1,12 @@
+2025-04-05T00:49:38Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14276632348 # 604
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-05
+* notice: last 14d: unq all: 4 5
+* notice: prev accum: outdated-unq outdated-all / unq all: 800 1278 / 804 1282
+* notice: next accum: outdated-unq outdated-all / unq all: 800 1278 / 805 1283
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-04-04]
+
 2025-04-04T00:50:34Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14255654115 # 603
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-04
